--- a/index.html
+++ b/index.html
@@ -1,27 +1,386 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="dist/css/all.min.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <!-- font-awesome -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="dist/css/all.min.css">
+  <title>week8</title>
 </head>
+
 <body>
-    <nav class="navbar">
-        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/logo-aloha.svg" alt="logo">
-        <ul class="d-flex list-unstyled m-0">
-            <li>
-                <a class="nav-link dropdown-toggle">
-                    <i class="fas fa-globe-americas"></i>
-                </a>
-            </li>
-            <li><a class="nav-link">Sign up</a></li>
-            <li><a class="nav-link">Login</a></li>
-        </ul>
-    </nav>
-    <div class="btn btn-primary">check</div>
-      
-    
+  <nav class="navbar">
+    <div class="container">
+      <a href="index.html">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/logo-aloha.svg"
+          alt="logo">
+      </a>
+      <ul class="d-flex list-unstyled m-0">
+        <li class="mr-1">
+          <a href="#" class="nav-link dropdown-toggle text-dark">
+            <i class="fas fa-globe-americas"></i>
+          </a>
+        </li>
+        <li class="mr-1"><a class="nav-link text-dark">Sign up</a></li>
+        <li class="mr-1"><a class="nav-link text-dark">Login</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div id="carouselExampleControls" class="carousel slide position-relative" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/index-banner.jpg"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://upload.cc/i1/2020/12/08/jviGTP.jpg
+        " class="d-block w-100" alt="..." style="background-position: center center;">
+      </div>
+      <div class="carousel-item">
+        <img src="https://upload.cc/i1/2020/12/08/6pwHYI.jpg
+        " class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+    <h1 class="slogan position-absolute text-white">Discover your ideal hotel</h1>
+
+    <form
+      class="user-select-bar bg-secondary py-5 px-2 rounded position-absolute d-flex justify-content-around align-items-center">
+      <select class="Destination-select border-0">
+        <option selected>Destination</option>
+        <option value="1">Bangkok</option>
+        <option value="2">Osaka</option>
+        <option value="3">Roma</option>
+        <option value="4">Paris</option>
+        <option value="5">Reykjavik</option>
+      </select>
+
+      <select class="guests-select border-0">
+        <option selected>Guests</option>
+        <option value="1">Bangkok</option>
+        <option value="2">Osaka</option>
+        <option value="3">Roma</option>
+        <option value="4">Paris</option>
+        <option value="5">Reykjavik</option>
+      </select>
+
+      <select class="guests-select border-0">
+        <option selected>Guests</option>
+        <option value="1">Bangkok</option>
+        <option value="2">Osaka</option>
+        <option value="3">Roma</option>
+        <option value="4">Paris</option>
+        <option value="5">Reykjavik</option>
+      </select>
+
+      <div class="btn btn-primary p-3">SEARCH</div>
+    </form>
+  </div>
+  <!-- header -->
+  <div class="container">
+    <h2 class="mb-3">Top Choices</h2>
+    <ul class="list-unstyled d-flex">
+      <li>
+        <a href="#" class="city-link p-4 py-1 h3">Bali
+          <sup>128</sup></a>
+      </li>
+      <li>
+        <a href="#" class="city-link p-4 py-1 h3">Okinawa
+          <sup>67</sup></a>
+      </li>
+      <li>
+        <a href="#" class="city-link p-4 py-1 h3">Taipei
+          <sup>53</sup></a>
+      </li>
+    </ul>
+
+    <ul class="row list-unstyled top-choices-list mb-5">
+      <li class="col-3">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top1.jpg"
+            class="card-img-top rounded mb-1" alt="hotel-photo">
+          <div class="card-body">
+            <h5 class="mb-1">Hotel Aqua</h5>
+            <ul class="list-unstyled d-flex mb-1">
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-2"><i class="fas fa-star"></i></li>
+              <li class="text-black-50"><small>5.0</small></li>
+              <li class="text-black-50"><small>・2k reviews</small></li>
+            </ul>
+            <p class="text-black-50">TWD 2,480<del class="ml-2 small">TWD 3,980</del>
+            </p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-3">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top2.jpg"
+            class="card-img-top rounded mb-1" alt="hotel-photo">
+          <div class="card-body">
+            <h5 class="mb-1">Mr. Kawasaki Inn</h5>
+            <ul class="list-unstyled d-flex mb-1">
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-2"><i class="fas fa-star"></i></li>
+              <li class="text-black-50"><small>4.0</small></li>
+              <li class="text-black-50"><small>・500 reviews</small></li>
+            </ul>
+            <p class="text-black-50">TWD 3,380</p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-3">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top3.jpg"
+            class="card-img-top rounded mb-1" alt="hotel-photo">
+          <div class="card-body">
+            <h5 class="mb-1">Weekly Paradise</h5>
+            <ul class="list-unstyled d-flex mb-1">
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-2"><i class="fas fa-star"></i></li>
+              <li class="text-black-50"><small>4.0</small></li>
+              <li class="text-black-50"><small>・470 reviews</small></li>
+            </ul>
+            <p class="text-black-50">TWD 4,780</p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-3">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top4.jpg"
+            class="card-img-top rounded mb-1" alt="hotel-photo">
+          <div class="card-body">
+            <h5 class="mb-1">Beast Hotel</h5>
+            <ul class="list-unstyled d-flex mb-1">
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-1"><i class="fas fa-star"></i></li>
+              <li class="mr-2"><i class="fas fa-star"></i></li>
+              <li class="text-black-50"><small>4.0</small></li>
+              <li class="text-black-50"><small>・283 reviews</small></li>
+            </ul>
+            <p class="text-black-50">TWD 1,980</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <!-- Top Choices -->
+
+    <h2 class="mb-4">Popular Destinations</h2>
+    <ul class="row list-unstyled popular-destinations-list mb-5">
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Osaka.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>JAPAN</small></p>
+              <h3 class="card-title mb-0">Osaka</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Kyoto.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>JAPAN</small></p>
+              <h3 class="card-title mb-0">Kyoto</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Reykjavic.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>iceland</small></p>
+              <h3 class="card-title mb-0">Reykjavík</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Paris.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>France</small></p>
+              <h3 class="card-title mb-0">Paris</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Roman.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>Italy</small></p>
+              <h3 class="card-title mb-0">Roma</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4 mb-4">
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Bangkok.jpg"
+            class="card-img" alt="attractions-photo">
+          <div class="photo-mask rounded"></div>
+          <div class="card-img-overlay d-flex align-items-center text-white">
+            <div>
+              <p class="card-text mb-0"><small>Thailand</small></p>
+              <h3 class="card-title mb-0">Bangkok</h3>
+            </div>
+            <i class="fas fa-chevron-down ml-auto"></i>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <!-- Popular Destinations -->
+
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="m-0">Get Inspiration</h2>
+      <button class="btn btn-outline-primary">see more</button>
+    </div>
+    <ul class="row list-unstyled get-inspiration-list mb-5">
+      <li class="col-4">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/italy.jpg"
+            class="card-img-top rounded mb-4" alt="hotel-photo">
+          <div class="card-body">
+            <h3 class="mb-1">The fifth most visited country</h3>
+            <p class="text-black-50">
+              Italy is the fifth most visited country in the world, with a total of 52.3 million…
+            </p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Thailand.jpg"
+            class="card-img-top rounded mb-4" alt="hotel-photo">
+          <div class="card-body">
+            <h3 class="mb-1">Visit Thailand for Bangkok</h3>
+            <p class="text-black-50">
+              Asian tourists primarily visit Thailand for Bangkok and the historical, natural, and…
+            </p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-4">
+        <div class="card border-0">
+          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/NewZealand.jpg"
+            class="card-img-top rounded mb-4" alt="hotel-photo">
+          <div class="card-body">
+            <h3 class="mb-1">Lord of the Rings Tour</h3>
+            <p class="text-black-50">
+              The national cuisine has been described as Pacific Rim, incorporating the native Māori…
+            </p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- Get Inspiration -->
+
+  <footer class="bg-secondary p-5 d-flex flex-column align-items-center">
+    <p class="display-5 mb-4 pt-5">
+      Subscribe for Exclusive Offer
+    </p>
+
+    <form class="pb-5" style="width: 540px;">
+      <div class="input-group">
+        <input type="email" class="form-control border-0 py-3" placeholder="Your email address"
+          aria-label="Your email address" aria-describedby="email">
+        <div class="input-group-append">
+          <button class="btn btn-primary rounded-0 rounded-right p-3" type="button" id="email">
+            SUBSCRIBE
+          </button>
+        </div>
+      </div>
+    </form>
+  </footer>
+
+  <div class="container d-flex align-items-center p-3">
+    <small class="text-black-50 mr-5">© 2020 ALOHA, Inc. All rights reserved.</small>
+
+    <ul class="list-unstyled d-flex m-0">
+      <li><a href="#" class="px-1 mx-2 text-black-50">FAQs</a></li>
+      <li><a href="#" class="px-1 mx-2 text-black-50">Terms of use</a></li>
+      <li><a href="#" class="px-1 mx-2 text-black-50">Privacy policy</a></li>
+    </ul>
+
+    <ul class="list-unstyled d-flex m-0 ml-auto">
+      <li>
+        <a href="#" class="nav-link dropdown-toggle">
+          <i class="fas fa-globe-americas"></i>
+          <small class="text-black-50">English</small>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link dropdown-toggle">
+        <i class="fas fa-hand-holding-usd"></i>
+        <small class="text-black-50">TWD</small>
+      </a>
+    </li>
+    </ul>
+  </div>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
