--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <!-- font-awesome -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+  <!-- swiper -->
   <link rel="stylesheet" href="dist/css/all.min.css">
   <title>week8</title>
 </head>
@@ -35,15 +35,15 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/index-banner.jpg"
-          class="d-block w-100" alt="...">
+          class="d-block w-100" alt="carousel-photo">
       </div>
       <div class="carousel-item">
         <img src="https://upload.cc/i1/2020/12/08/jviGTP.jpg
-        " class="d-block w-100" alt="..." style="background-position: center center;">
+        " class="d-block w-100" alt="carousel-photo">
       </div>
       <div class="carousel-item">
         <img src="https://upload.cc/i1/2020/12/08/6pwHYI.jpg
-        " class="d-block w-100" alt="...">
+        " class="d-block w-100" alt="carousel-photo">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -55,11 +55,13 @@
       <span class="sr-only">Next</span>
     </a>
 
-    <h1 class="slogan position-absolute text-white">Discover your ideal hotel</h1>
+    <h1 class="slogan position-absolute text-white">
+      Discover your ideal hotel
+    </h1>
 
     <form
-      class="user-select-bar bg-secondary py-5 px-2 rounded position-absolute d-flex justify-content-around align-items-center">
-      <select class="Destination-select border-0">
+      class="user-select-bar bg-secondary py-5 px-2 rounded position-absolute d-flex flex-lg-row flex-column justify-content-around align-items-center">
+      <select class="Destination-select border-0 mb-3 mb-lg-0">
         <option selected>Destination</option>
         <option value="1">Bangkok</option>
         <option value="2">Osaka</option>
@@ -68,7 +70,7 @@
         <option value="5">Reykjavik</option>
       </select>
 
-      <select class="guests-select border-0">
+      <select class="guests-select border-0 mb-3 mb-lg-0">
         <option selected>Guests</option>
         <option value="1">Bangkok</option>
         <option value="2">Osaka</option>
@@ -77,7 +79,7 @@
         <option value="5">Reykjavik</option>
       </select>
 
-      <select class="guests-select border-0">
+      <select class="guests-select border-0 mb-3 mb-lg-0">
         <option selected>Guests</option>
         <option value="1">Bangkok</option>
         <option value="2">Osaka</option>
@@ -107,90 +109,90 @@
       </li>
     </ul>
 
-    <ul class="row list-unstyled top-choices-list mb-5">
-      <li class="col-3">
-        <div class="card border-0">
-          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top1.jpg"
-            class="card-img-top rounded mb-1" alt="hotel-photo">
-          <div class="card-body">
-            <h5 class="mb-1">Hotel Aqua</h5>
-            <ul class="list-unstyled d-flex mb-1">
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-2"><i class="fas fa-star"></i></li>
-              <li class="text-black-50"><small>5.0</small></li>
-              <li class="text-black-50"><small>・2k reviews</small></li>
-            </ul>
-            <p class="text-black-50">TWD 2,480<del class="ml-2 small">TWD 3,980</del>
-            </p>
+    <div class="swiper-container">
+      <ul class="swiper-wrapper top-choices-list list-unstyled">
+        <li class="swiper-slide">
+          <div class="card border-0">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top1.jpg"
+            class="card-img-top mb-1" alt="hotel-photo">
+            <div class="card-body">
+              <h5 class="mb-1">Hotel Aqua</h5>
+              <ul class="list-unstyled d-flex mb-1">
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-2"><i class="fas fa-star"></i></li>
+                <li class="text-black-50"><small>5.0</small></li>
+                <li class="text-black-50"><small>・2k reviews</small></li>
+              </ul>
+              <p class="text-black-50">TWD 2,480<del class="ml-2 small">TWD 3,980</del>
+              </p>
+            </div>
           </div>
-        </div>
-      </li>
-
-      <li class="col-3">
-        <div class="card border-0">
-          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top2.jpg"
-            class="card-img-top rounded mb-1" alt="hotel-photo">
-          <div class="card-body">
-            <h5 class="mb-1">Mr. Kawasaki Inn</h5>
-            <ul class="list-unstyled d-flex mb-1">
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-2"><i class="fas fa-star"></i></li>
-              <li class="text-black-50"><small>4.0</small></li>
-              <li class="text-black-50"><small>・500 reviews</small></li>
-            </ul>
-            <p class="text-black-50">TWD 3,380</p>
+        </li>
+        <li class="swiper-slide">
+          <div class="card border-0">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top2.jpg"
+              class="card-img-top mb-1" alt="hotel-photo">
+            <div class="card-body">
+              <h5 class="mb-1">Mr. Kawasaki Inn</h5>
+              <ul class="list-unstyled d-flex mb-1">
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-2"><i class="fas fa-star"></i></li>
+                <li class="text-black-50"><small>4.0</small></li>
+                <li class="text-black-50"><small>・500 reviews</small></li>
+              </ul>
+              <p class="text-black-50">TWD 3,380</p>
+            </div>
           </div>
-        </div>
-      </li>
-
-      <li class="col-3">
-        <div class="card border-0">
-          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top3.jpg"
-            class="card-img-top rounded mb-1" alt="hotel-photo">
-          <div class="card-body">
-            <h5 class="mb-1">Weekly Paradise</h5>
-            <ul class="list-unstyled d-flex mb-1">
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-2"><i class="fas fa-star"></i></li>
-              <li class="text-black-50"><small>4.0</small></li>
-              <li class="text-black-50"><small>・470 reviews</small></li>
-            </ul>
-            <p class="text-black-50">TWD 4,780</p>
+        </li>
+        <li class="swiper-slide">
+          <div class="card border-0">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top3.jpg"
+              class="card-img-top mb-1" alt="hotel-photo">
+            <div class="card-body">
+              <h5 class="mb-1">Weekly Paradise</h5>
+              <ul class="list-unstyled d-flex mb-1">
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-2"><i class="fas fa-star"></i></li>
+                <li class="text-black-50"><small>4.0</small></li>
+                <li class="text-black-50"><small>・470 reviews</small></li>
+              </ul>
+              <p class="text-black-50">TWD 4,780</p>
+            </div>
           </div>
-        </div>
-      </li>
-
-      <li class="col-3">
-        <div class="card border-0">
-          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top4.jpg"
-            class="card-img-top rounded mb-1" alt="hotel-photo">
-          <div class="card-body">
-            <h5 class="mb-1">Beast Hotel</h5>
-            <ul class="list-unstyled d-flex mb-1">
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-1"><i class="fas fa-star"></i></li>
-              <li class="mr-2"><i class="fas fa-star"></i></li>
-              <li class="text-black-50"><small>4.0</small></li>
-              <li class="text-black-50"><small>・283 reviews</small></li>
-            </ul>
-            <p class="text-black-50">TWD 1,980</p>
+        </li>
+        <li class="swiper-slide">
+          <div class="card border-0">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/top4.jpg"
+              class="card-img-top mb-1" alt="hotel-photo">
+            <div class="card-body">
+              <h5 class="mb-1">Beast Hotel</h5>
+              <ul class="list-unstyled d-flex mb-1">
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-1"><i class="fas fa-star"></i></li>
+                <li class="mr-2"><i class="fas fa-star"></i></li>
+                <li class="text-black-50"><small>4.0</small></li>
+                <li class="text-black-50"><small>・283 reviews</small></li>
+              </ul>
+              <p class="text-black-50">TWD 1,980</p>
+            </div>
           </div>
-        </div>
-      </li>
-    </ul>
+        </li>
+      </ul>
+      <div class="swiper-button-next text-primary"></div>
+    </div>
     <!-- Top Choices -->
 
     <h2 class="mb-4">Popular Destinations</h2>
     <ul class="row list-unstyled popular-destinations-list mb-5">
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Osaka.jpg"
             class="card-img" alt="attractions-photo">
@@ -205,7 +207,7 @@
         </div>
       </li>
 
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Kyoto.jpg"
             class="card-img" alt="attractions-photo">
@@ -220,7 +222,7 @@
         </div>
       </li>
 
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Reykjavic.jpg"
             class="card-img" alt="attractions-photo">
@@ -235,7 +237,7 @@
         </div>
       </li>
 
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Paris.jpg"
             class="card-img" alt="attractions-photo">
@@ -250,7 +252,7 @@
         </div>
       </li>
 
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Roman.jpg"
             class="card-img" alt="attractions-photo">
@@ -265,7 +267,7 @@
         </div>
       </li>
 
-      <li class="col-4 mb-4">
+      <li class="col-lg-4 col-sm-6 col-12 mb-4">
         <div class="card">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/Bangkok.jpg"
             class="card-img" alt="attractions-photo">
@@ -330,11 +332,11 @@
   <!-- Get Inspiration -->
 
   <footer class="bg-secondary p-5 d-flex flex-column align-items-center">
-    <p class="display-5 mb-4 pt-5">
+    <p class="footer-title mb-4 pt-5">
       Subscribe for Exclusive Offer
     </p>
 
-    <form class="pb-5" style="width: 540px;">
+    <form class="pb-5">
       <div class="input-group">
         <input type="email" class="form-control border-0 py-3" placeholder="Your email address"
           aria-label="Your email address" aria-describedby="email">
@@ -347,16 +349,17 @@
     </form>
   </footer>
 
-  <div class="container d-flex align-items-center p-3">
-    <small class="text-black-50 mr-5">© 2020 ALOHA, Inc. All rights reserved.</small>
+  <div class="container d-flex flex-sm-row flex-column-reverse align-items-center p-3">
+    <small class="text-black-50 mr-lg-5 mr-sm-auto">
+      © 2020 ALOHA, Inc. All rights reserved.</small>
 
-    <ul class="list-unstyled d-flex m-0">
-      <li><a href="#" class="px-1 mx-2 text-black-50">FAQs</a></li>
-      <li><a href="#" class="px-1 mx-2 text-black-50">Terms of use</a></li>
-      <li><a href="#" class="px-1 mx-2 text-black-50">Privacy policy</a></li>
+    <ul class="list-unstyled d-flex m-0 mb-sm-0 mb-2">
+      <li><a href="#" class="mx-2 text-black-50">FAQs</a></li>
+      <li><a href="#" class="mx-2 text-black-50">Terms of use</a></li>
+      <li><a href="#" class="mx-2 text-black-50">Privacy policy</a></li>
     </ul>
 
-    <ul class="list-unstyled d-flex m-0 ml-auto">
+    <ul class="list-unstyled d-lg-flex m-0 ml-auto d-none">
       <li>
         <a href="#" class="nav-link dropdown-toggle">
           <i class="fas fa-globe-americas"></i>
@@ -374,6 +377,27 @@
 
 
 
+   <!-- Swiper JS -->
+   <script src="https://unpkg.com/swiper@6.4.1/swiper-bundle.min.js"></script>
+
+   <!-- Initialize Swiper -->
+   <script>
+     var swiper = new Swiper('.swiper-container', {
+      slidesPerView: 4,
+      spaceBetween: 30,
+      loop: true,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+});
+   </script>
+
+   
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
