--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
 <body>
   <nav class="navbar">
     <div class="container">
+
+      <div class="btn-range rounded-lg position-relative 
+      d-flex justify-content-center align-items-center d-sm-none d-block">
+        <div class="btn-line"></div>
+      </div>
+
       <a href="index.html">
         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/logo-aloha.svg"
           alt="logo">
       </a>
       <ul class="d-flex list-unstyled m-0">
         <li class="dropdown mr-1">
-          <button class="btn nav-link dropdown-toggle" data-toggle="dropdown" id="language-drop">
+          <button class="btn nav-link dropdown-toggle d-sm-block d-none" data-toggle="dropdown" id="language-drop">
             <i class="fas fa-globe-americas"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="language-drop">
@@ -36,7 +42,7 @@
             <a class="dropdown-item" href="#">日文</a>
           </div>
         </li>
-        <li class="mr-1"><button class="btn nav-link">Sign up</button></li>
+        <li class="mr-1"><button class="btn nav-link d-sm-block d-none">Sign up</button></li>
         <li class="mr-1"><button class="btn nav-link">Login</button></li>
       </ul>
     </div>
@@ -57,6 +63,8 @@
         " class="d-block w-100" alt="carousel-photo">
       </div>
     </div>
+    <!-- 圖片不知道如何置中，電腦版型時圖片只顯示了上半部 -->
+    <!-- 手機版型的時候，輪播圖片高度不同，會有上下跳動的情況 -->
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -95,12 +103,14 @@
           <i class="far fa-calendar-alt mr-3"></i>
           Check-in / out</button>
       </li>
+      <!-- 日期顯示不出來，我是參考w3school的，但貼在這裡沒有成功 -->
 
       <li class="dropdown">
         <button type="button" class="btn btn-light mb-lg-0 mb-3 p-3 btn-block" id="drop-guests" data-toggle="dropdown">
           <i class="fas fa-user mr-3"></i>
           Guests
         </button>
+        <!-- 這邊的button下btn-block不知道為什麼都沒有作用 -->
         <div class="dropdown-menu" aria-labelledby="drop-guests">
           <a class="dropdown-item d-flex" href="#">
             Adult
@@ -128,8 +138,7 @@
           </a>
         </div>
       </li>
-
-      <button class="search-btn btn btn-primary p-3 btn-block">SEARCH</button>
+      <a  href="result.html" class="search-btn btn btn-primary p-3 btn-block">SEARCH</a>
     </ul>
   </div>
   <!-- header -->
@@ -229,6 +238,8 @@
       </ul>
       <div class="swiper-button-next text-white"></div>
     </div>
+
+    <!-- swiper如何製作像設計稿那樣，畫面超出版面，然後用按鈕瀏覽的效果？ -->
     <!-- Top Choices -->
 
     <div class="mb-xl">
@@ -453,7 +464,7 @@
           spaceBetween: 30
         },
         // when window width is <= 499px
-        900: {
+        768: {
           slidesPerView: 2,
           spaceBetween: 30
         },
@@ -468,19 +479,20 @@
 
 
   <script>
-    jQuery(document).ready(function () {
-      $(function () {
+    $(function () {
         $("#datepicker").datepicker({
           changeMonth: true,
           changeYear: true
         });
       });
-    })
-
+    // 日期
+    $('.btn-range').click(function (e) { 
+        $('.btn-range').toggleClass('open');
+    });
 
 
   </script>
-  <!-- jQuery日期 -->
+  
 
 
 
