--- a/result.html
+++ b/result.html
@@ -780,7 +780,10 @@
                 </div>
                 
                 <div class="d-flex align-items-center justify-content-between bg-secondary p-3 rounded mb-5">
-                    <button class="btn btn-outline-primary mr-auto">PREVIOUS</button>
+                    <button class="btn btn-outline-primary mr-auto">
+                        <i class="fas fa-angle-left d-sm-none d-block"></i>
+                        <p class="m-0 d-sm-block d-none">PREVIOUS</p>
+                        </button>
                     <ul class="list-unstyled d-flex m-0">
                         <li><button class="btn btn-light mr-1">1</button></li>
                         <li><button class="btn mr-1">2</button></li>
@@ -788,7 +791,10 @@
                         <li><button class="btn mr-1">4</button></li>
                         <li><button class="btn">5</button></li>
                     </ul>
-                    <button class="btn btn-primary ml-auto">NEXT</button>
+                    <button class="btn btn-primary ml-auto">
+                        <i class="fas fa-angle-right d-sm-none d-block"></i>
+                        <p class="m-0 d-sm-block d-none">NEXT</p>
+                        </button>
                 </div>
             </div>
         </div>
