--- a/result.html
+++ b/result.html
@@ -27,10 +27,12 @@
                     <div class="btn-line"></div>
                 </div>
 
-                <a href="index.html">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/logo-aloha.svg"
-                        alt="logo">
-                </a>
+                <h1>
+                    <a href="index.html">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week8/logo-aloha.svg"
+                            alt="logo">
+                    </a>
+                </h1>
                 <ul class="d-flex list-unstyled m-0">
                     <li class="dropdown mr-1">
                         <button class="btn nav-link dropdown-toggle d-sm-block d-none" data-toggle="dropdown"
@@ -44,7 +46,7 @@
                         </div>
                     </li>
                     <li class="mr-1"><button class="btn nav-link d-sm-block d-none">Sign up</button></li>
-                    <li class="mr-1"><button class="btn nav-link">Login</button></li>
+                    <li class="mr-1"><a href="login.html"><button class="btn nav-link">Login</button></a></li>
                 </ul>
             </div>
         </nav>
