--- a/result.html
+++ b/result.html
@@ -302,7 +302,7 @@
             </div>
 
             <!-- Room card -->
-            <div class="col-sm-8 col-12">
+            <div class="col-sm-8 col-12 room-card">
                 <h2 class="d-sm-none d-block text-center mb-4">Bangkok<sup class="text-primary small">3,240</sup></h2>
                 <div class="btn-group btn-group-lg d-flex justify-content-around mb-3 d-sm-none d-block">
                     <button type="button" class="btn border-right">
